# hgnn-fd-discovery

./: LICENSE  main.ipynb  pyproject.toml
