[project]
name = "bounded-asset-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pyfd>=0.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]
